tests/fixtures/invalid/round_none_none.py
# Cannot call round() with None, None
x = round(None, None)
